Tue Dec 12 12:05:24 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added quartzdump utility to dump the contents of a quartz table.

Tue Dec 12 10:54:44 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added constructors and destructor to OmRSet.

Mon Dec 11 16:32:07 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Remove caching of average length in OmDatabaseInternal, was breaking
	  asking for the average length of a database which was being
	  modified.

Mon Dec 11 16:03:46 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* If no documents in database, don't divide by zero in
	  omdatabaseinternal.cc

	* If a document object doesn't come from the database, when iterating
	  through its termlist don't open postlists from the nonexistant
	  database; open them from the DocumentTerm objects in the document
	  instead.

	* Remove old unused and undefined method
	  OmDocument::Internal::add_posting()

Mon Dec 11 13:53:18 GMT 2000 Olly Betts

	* omenquire.h: Removed superfluous declaration of OmMSetCmp.

Mon Dec 11 13:38:12 GMT 2000 Olly Betts

	* Updated TODO list.

Mon Dec 11 13:24:45 GMT 2000 Olly Betts

	* OmRSet internals encapsulated.

Mon Dec 11 12:42:02 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* OmIndexerMessage::get_element and ...::operator[] now have
	  non-const versions.  Fixes const-warning in omstemmernode.cc.

Mon Dec 11 12:17:32 GMT 2000 Olly Betts

	* Better typedef-s for Om*Iterator::difference_type.

Sun Dec 10 17:51:41 GMT 2000 Olly Betts

	* Corrected various typedef-s for Om*Iterator.

Sun Dec 10 17:28:59 GMT 2000 Olly Betts

	* Updated TODO to reflect OmESet being cleaned up.

	* Term position argument to OmDocument::add_posting() is now
	  optional (as it was for OmDocumentContents).

Sun Dec 10 16:55:17 GMT 2000 Olly Betts

	* OmESetItem is dead - long live OmESetIterator!

	* net/socketclient.cc: fixed compiler warning.

	* net/socketserver.cc: fixed compiler warning.
